# invest-bot

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
data/: startup_investment_meeting_data_30.json
